[project]
name = "AdaptiveAutoAttack"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "torch>=1.7.1",
    "torchvision>=0.8.2",
    "numpy>=1.19.4",
    "tqdm",
    "pandas",
    "easydict",
    "Pillow",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"